# mural

./: .gitignore  CLAUDE.md  INSTALL.md  LICENSE  Pipfile  README.md  cec.go  common.py  cron.py  crontab  go.mod  go.sum  gui.py  install.sh  kiosk.sh  main.go  main.py  on.sh  pyproject.toml  readxlsheet.py  requirements.txt  sample-settings.yaml  schedule.go  schedule.yaml  slideshow.go  turn-off.sh  turn-on.sh
.github/: release.yaml
.github/workflows/: build.yaml  release.yaml
docs/: INSTALL.md  hardware.md  install.md
dotfiles/: .ratpoisonrc  .xinitrc  install.sh  tty1-guard.sh
mural_digital/: __init__.py  __main__.py  cron.py  slideshow.py
raspberry-pi/: install.sh  xinitrc
raspberry-pi/docs/: hardware.md
src/mural_digital/: __init__.py  __main__.py
